--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ dot
 *.hevm
 *.o
 *.so
-*.txt
 *.dot
 *.csv
 !CMakeLists.txt
@@ -24,6 +23,8 @@ dot
 !versions.txt
 python/hecate/dist
 python/hecate/hecate.egg-info
+python/poly/dist
+python/poly/poly.egg-info
 examples/optimized
 examples/traced
 Session.vim
