Upload DaCapo Compiler Implementation

--- a/lib/Dialect/Earth/Analysis/CMakeLists.txt
+++ b/lib/Dialect/Earth/Analysis/CMakeLists.txt
@@ -1,12 +1,13 @@
 add_mlir_dialect_library(EarthAnalysis
-  ScaleManagementUnit.cpp
-  AutoDifferentiation.cpp
-  DEPENDS
-  HecateEarthOpsIncGen
-  HecateEarthTransformsIncGen
-  LINK_LIBS
-  PUBLIC
-  EarthDialect
-  MLIRIR
-  MLIRAnalysis
-  )
+ ScaleManagementUnit.cpp
+ AutoDifferentiation.cpp
+ CandidateAnalysis.cpp
+ DEPENDS
+ HecateEarthOpsIncGen
+ HecateEarthTransformsIncGen
+ LINK_LIBS
+ PUBLIC
+ EarthDialect
+ MLIRIR
+ MLIRAnalysis
+ )
