Remove HEaaN Library Dependency Code

--- a/lib/Runtime/CMakeLists.txt
+++ b/lib/Runtime/CMakeLists.txt
@@ -1,16 +1,21 @@
 
 add_library (SEAL_HEVM
-  SHARED
-  SEAL_HEVM.cpp)
+ SHARED
+ SEAL_HEVM.cpp)
 target_link_libraries(SEAL_HEVM
-  PUBLIC
-  SEAL::seal
-  )
+ PUBLIC
+ SEAL::seal
+ )
 
-add_library (HEAAN_HEVM
-  SHARED
-  HEAAN_HEVM.cpp)
-target_link_libraries(HEAAN_HEVM
-  PUBLIC
-  HEaaN::HEaaN
-  )
+add_library (TOY_HEVM
+ SHARED
+ TOY_HEVM.cpp)
+
+
+# add_library (HEAAN_HEVM
+#   SHARED
+#   HEAAN_HEVM.cpp)
+# target_link_libraries(HEAAN_HEVM
+#   PUBLIC
+#   HEaaN::HEaaN
+#   )
